# antlion

./: CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
docs/: plan.md  todo.md
src/: antlion.py  cli.py  generator.py  manifest.py  planner.py  resume.py  write_conf.py  write_epdf.py  write_json.py  write_pdf.py  write_pptx.py  write_xlsx.py  write_xml.py  writers.py
src/antlion/: __init__.py  __main__.py  cli.py  generator.py  manifest.py  models.py  planner.py
src/antlion/writers/: __init__.py  docx.py  md.py  pptx.py
tests/: test_cli_validation.py  test_entrypoint.py  test_generator.py  test_integration.py  test_manifest.py  test_models.py  test_plan_processing.py  test_planner.py  test_resume_and_dryrun.py  test_writers.py
