[project]
name = "antlion"
version = "0.1.0"
description = "AI-powered adversary engagement tool for generating high-fidelity decoy files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic",
    "pydantic",
    "python-docx",
    "openpyxl",
    "python-pptx",
    "reportlab",
    "pypdf",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antlion"]
